🛠️chore : 각종 기초 세팅 맞춤 및 auto-assign 설정